--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 JWT_SECRET_KEY=wejgvwfaytf
-JWT_SECRET_KEY=HS256
+JWT_ALGORITHM=HS256
 PSWD_SECRET_KEY = fcjgvhgqd
 DATABASE_URL = f"postgresql://smsuser:smspassword@localhost:5432/sms-campainger"
 
