--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ async-timeout==4.0.3
 asyncpg==0.29.0
 bcrypt==4.1.3
 certifi==2024.6.2
+cffi==1.16.0
 click==8.1.7
+cryptography==42.0.8
 databases==0.9.0
 dnspython==2.6.1
 ecdsa==0.19.0
@@ -20,6 +22,7 @@ httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+jwt==1.3.1
 Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -27,9 +30,11 @@ mdurl==0.1.2
 orjson==3.10.5
 psycopg2==2.9.9
 pyasn1==0.6.0
+pycparser==2.22
 pydantic==2.7.4
 pydantic_core==2.18.4
 Pygments==2.18.0
+PyJWT==2.8.0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
