--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ asyncpg==0.29.0
 bcrypt==4.1.3
 certifi==2024.6.2
 cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
+coverage==7.5.3
 cryptography==42.0.8
 databases==0.9.0
 dnspython==2.6.1
@@ -21,6 +23,7 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+iniconfig==2.0.0
 Jinja2==3.1.4
 jwt==1.3.1
 Mako==1.3.5
@@ -28,6 +31,8 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.5
+packaging==24.1
+pluggy==1.5.0
 psycopg2==2.9.9
 pyasn1==0.6.0
 pycparser==2.22
@@ -35,10 +40,15 @@ pydantic==2.7.4
 pydantic_core==2.18.4
 Pygments==2.18.0
 PyJWT==2.8.0
+pytest==8.2.2
+pytest-asyncio==0.23.7
+pytest-cov==5.0.0
+pytest-mock==3.14.0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
 PyYAML==6.0.1
+requests==2.32.3
 rich==13.7.1
 rsa==4.9
 shellingham==1.5.4
@@ -46,9 +56,11 @@ six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.30
 starlette==0.37.2
+tomli==2.0.1
 typer==0.12.3
 typing_extensions==4.12.2
 ujson==5.10.0
+urllib3==2.2.2
 uvicorn==0.30.1
 uvloop==0.19.0
 watchfiles==0.22.0
